Fixed 0-100 -> 1-101